--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,10 +23,12 @@
     "sucrase": "^3.23.0"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   }
 }
